src/objects/JIRA__c.object
<CustomObject>
    <description>Used to store information related to Salesforce Cases from JIRA</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>JIRA</relationshipLabel>
        <relationshipName>JIRA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JIRA_Errors__c</fullName>
        <label>JIRA Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Key__c</fullName>
        <label>JIRA Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JIRA</label>
    <nameField>
        <label>JIRA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>